--- a/index.html
+++ b/index.html
@@ -1,302 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Will you be my Valentine?</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>For the love of my life 💖</title>
 
-  <!-- Confetti library -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
-  <style>
-    :root {
-      --bg1: #ffd6e7;
-      --bg2: #ffeef6;
-      --card: #ffffffcc;
-      --yes: #ff3b7a;
-      --yesHover: #ff1f68;
-    }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
 
-    * { box-sizing: border-box; }
+:root {
+  --bg1: #000;
+  --bg2: #1a0010;
+  --accent: #ff9fc7;
+}
 
-    body {
-      margin: 0;
-      min-height: 100svh;
-      display: grid;
-      place-items: center;
-      background: radial-gradient(circle at top, var(--bg2), var(--bg1));
-      font-family: system-ui, sans-serif;
-      overflow: hidden;
-      padding: 16px;
-    }
+body.rose {
+  --bg1: #2b0014;
+  --bg2: #7a0036;
+  --accent: #ffd1dc;
+}
 
-    /* FULL-SCREEN CONFETTI CANVAS */
-    #confettiCanvas {
-      position: fixed;
-      inset: 0;
-      width: 100vw;
-      height: 100vh;
-      pointer-events: none;
-      z-index: 9999;
-    }
+body {
+  height: 100vh;
+  overflow: hidden;
+  background: radial-gradient(circle at top, var(--bg2), var(--bg1));
+  color: white;
+  transition: background 0.8s ease;
+}
 
-    .card {
-      width: min(720px, 92vw);
-      padding: 26px 22px;
-      background: var(--card);
-      backdrop-filter: blur(10px);
-      border-radius: 22px;
-      text-align: center;
-      box-shadow: 0 18px 60px rgba(0,0,0,.15);
-    }
+/* Slides */
+.slide {
+  height: 100vh;
+  width: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 30px;
+  position: relative;
+  z-index: 2;
+}
 
-    .art {
-      width: min(260px, 80vw);
-      margin: 0 auto 10px;
-      display: block;
-      filter: drop-shadow(0 10px 14px rgba(0,0,0,.12));
-    }
+.slide.active {
+  display: flex;
+}
 
-    h1 {
-      font-size: clamp(26px, 4vw, 44px);
-      margin: 12px 0 18px;
-    }
+.card {
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(22px);
+  border-radius: 34px;
+  padding: 46px 36px;
+  max-width: 430px;
+  width: 100%;
+  box-shadow: 0 40px 100px rgba(255, 180, 120, 0.25);
+  animation: float 4s ease-in-out infinite;
+}
 
-    .button-zone {
-      position: relative;
-      width: min(520px, 92%);
-      height: 150px;
-      margin: 0 auto;
-      touch-action: none;
-    }
+@keyframes float {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-16px); }
+}
 
-    button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      padding: 16px 24px;
-      font-size: 18px;
-      font-weight: 800;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 10px 24px rgba(0,0,0,.14);
-      user-select: none;
-      -webkit-tap-highlight-color: transparent;
-      transition: transform .12s ease, background .12s ease;
-    }
+h1 {
+  font-size: 2.2rem;
+  margin-bottom: 15px;
+  background: linear-gradient(45deg, #ffd700, #ff9fc7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-    #yesBtn {
-      left: 18%;
-      background: var(--yes);
-      color: #fff;
-    }
-    #yesBtn:hover { background: var(--yesHover); }
+p {
+  font-size: 1.1rem;
+  opacity: 0.9;
+  margin-bottom: 22px;
+}
 
-    #noBtn {
-      left: 62%;
-      background: #e5e7eb;
-      color: #111827;
-    }
+.countdown {
+  font-size: 1.15rem;
+  letter-spacing: 1px;
+  margin-bottom: 25px;
+  color: var(--accent);
+}
 
-    .hint {
-      margin-top: 10px;
-      font-size: 13px;
-      opacity: .7;
-    }
+button {
+  background: linear-gradient(45deg, #ffd700, #ff4f9a);
+  border: none;
+  color: white;
+  padding: 15px 36px;
+  border-radius: 50px;
+  font-size: 1rem;
+  cursor: pointer;
+  box-shadow: 0 18px 45px rgba(255,215,0,0.45);
+  transition: transform 0.2s ease;
+}
 
-    .result {
-      display: none;
-      margin-top: 18px;
-      animation: pop .35s ease;
-    }
+button:hover {
+  transform: scale(1.08);
+}
 
-    .result h2 {
-      font-size: clamp(30px, 4.5vw, 46px);
-      margin: 10px 0;
-    }
+.btn-group {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-    .fireworks {
-      width: min(380px, 90vw);
-      margin: 0 auto;
-      display: block;
-    }
+.toggle {
+  margin-top: 15px;
+  font-size: 0.9rem;
+  opacity: 0.8;
+  cursor: pointer;
+}
 
-    @keyframes pop {
-      from { transform: scale(.96); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
-    }
-  </style>
+/* Hearts */
+.heart {
+  position: absolute;
+  bottom: -40px;
+  font-size: 22px;
+  animation: rise linear infinite;
+  opacity: 0.85;
+  z-index: 1;
+}
+
+@keyframes rise {
+  0% { transform: translateY(0) scale(1); opacity: 0; }
+  15% { opacity: 1; }
+  100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
+}
+
+/* GOLD GLITTER */
+.glitter {
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  background: radial-gradient(circle, #ffd700, rgba(255,215,0,0.1));
+  border-radius: 50%;
+  pointer-events: none;
+  animation: sparkle 1s linear forwards;
+  z-index: 1;
+}
+
+@keyframes sparkle {
+  0% { transform: scale(1); opacity: 1; }
+  100% { transform: scale(0); opacity: 0; }
+}
+</style>
 </head>
 
 <body>
-  <canvas id="confettiCanvas"></canvas>
 
-  <main class="card">
-    <!-- ANIMAL WITH HEART -->
-    <svg class="art" viewBox="0 0 320 240" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <linearGradient id="fur" x1="0" x2="1">
-          <stop offset="0" stop-color="#f7c7a1"/>
-          <stop offset="1" stop-color="#f2a97b"/>
-        </linearGradient>
-        <linearGradient id="heart" x1="0" x2="1">
-          <stop offset="0" stop-color="#ff4d7d"/>
-          <stop offset="1" stop-color="#ff1f68"/>
-        </linearGradient>
-      </defs>
+<!-- MUSIC -->
+<audio id="bgMusic" loop>
+  <source src="https://cdn.pixabay.com/audio/2023/02/14/audio_2b6f9d75d7.mp3" type="audio/mpeg">
+</audio>
 
-      <path d="M250 50 C250 33 270 25 282 38
-               C294 25 314 33 314 50
-               C314 78 282 92 282 106
-               C282 92 250 78 250 50Z"
-            fill="url(#heart)"/>
+<!-- SLIDES -->
+<div class="slide active">
+  <div class="card">
+    <h1>MiMi 💖</h1>
+    <p>I made something unforgettable… just for you ✨</p>
+    <button onclick="nextSlide()">Begin 💫</button>
+  </div>
+</div>
 
-      <path d="M90 120 C90 70 140 40 190 60
-               C240 40 290 70 290 120
-               C290 180 240 210 190 210
-               C140 210 90 180 90 120Z"
-            fill="url(#fur)"/>
+<div class="slide">
+  <div class="card">
+    <h1>Main Character Energy</h1>
+    <p>You don’t try — you just shine 💎</p>
+    <button onclick="nextSlide()">Next 😌</button>
+  </div>
+</div>
 
-      <path d="M110 92 L95 55 L140 78 Z" fill="#f2a97b"/>
-      <path d="M270 92 L285 55 L240 78 Z" fill="#f2a97b"/>
+<div class="slide">
+  <div class="card">
+    <h1>Countdown to Valentine’s 💕</h1>
+    <div id="countdown" class="countdown"></div>
+    <button onclick="nextSlide()">Tell Me 👀</button>
+  </div>
+</div>
 
-      <circle cx="160" cy="130" r="8"/>
-      <circle cx="220" cy="130" r="8"/>
+<div class="slide">
+  <div class="card">
+    <h1>So… 💘</h1>
+    <p>Will you be my Valentine?</p>
+    <div class="btn-group">
+      <button onclick="finale()">YES 💖</button>
+      <button onclick="finale()">ABSOLUTELY 😍</button>
+    </div>
+  </div>
+</div>
 
-      <path d="M190 144 C186 144 182 148 182 152
-               C182 160 190 164 190 170
-               C190 164 198 160 198 152
-               C198 148 194 144 190 144Z"
-            fill="#ff7aa2"/>
-    </svg>
+<div class="slide">
+  <div class="card">
+    <h1>👑 QUEEN OF MY WORLD 👑</h1>
+    <p>You’re adored, celebrated, and chosen.</p>
+    <button onclick="share()">Share This Moment 📲</button>
+    <div class="toggle" onclick="toggleTheme()">Switch Mood 🌙</div>
+  </div>
+</div>
 
-    <h1>MiMi will you be my valentine?</h1>
+<script>
+let current = 0;
+const slides = document.querySelectorAll('.slide');
+const music = document.getElementById('bgMusic');
 
-    <section class="button-zone" id="zone">
-      <button id="yesBtn">Yes</button>
-      <button id="noBtn">No</button>
-    </section>
+function nextSlide() {
+  if (music.paused) music.play();
+  slides[current].classList.remove('active');
+  current++;
+  slides[current].classList.add('active');
+}
 
-    <!-- HINT -->
-    <div class="hint" id="hint">“No” seems a bit shy 😈</div>
+function finale() {
+  nextSlide();
+  confetti({ particleCount: 350, spread: 150, origin: { y: 0.6 } });
+  for (let i = 0; i < 40; i++) createHeart();
+}
 
-    <section class="result" id="result">
-      <h2>YAY! 🎉</h2>
-      <img
-        class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
-        alt="Fireworks"
-      />
-    </section>
-  </main>
+function createHeart() {
+  const heart = document.createElement('div');
+  heart.className = 'heart';
+  heart.innerHTML = '💖';
+  heart.style.left = Math.random() * 100 + 'vw';
+  heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}
+setInterval(createHeart, 850);
 
-  <script>
-    const zone = document.getElementById("zone");
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const result = document.getElementById("result");
-    const hint = document.getElementById("hint");
+/* Countdown */
+const countdownEl = document.getElementById('countdown');
+const valentines = new Date(new Date().getFullYear(), 1, 14).getTime();
+setInterval(() => {
+  const diff = valentines - Date.now();
+  const d = Math.floor(diff / 86400000);
+  const h = Math.floor((diff / 3600000) % 24);
+  const m = Math.floor((diff / 60000) % 60);
+  countdownEl.textContent = ${d}d ${h}h ${m}m until Valentine’s 💘;
+}, 1000);
 
-    /* ---------- CONFETTI ---------- */
-    const confettiCanvas = document.getElementById("confettiCanvas");
+/* Swipe */
+let startY = 0;
+document.addEventListener('touchstart', e => startY = e.touches[0].clientY);
+document.addEventListener('touchend', e => {
+  if (startY - e.changedTouches[0].clientY > 50 && current < slides.length - 1)
+    nextSlide();
+});
 
-    function resizeConfettiCanvas() {
-      const dpr = Math.max(1, window.devicePixelRatio || 1);
-      confettiCanvas.width = Math.floor(window.innerWidth * dpr);
-      confettiCanvas.height = Math.floor(window.innerHeight * dpr);
-      confettiCanvas.style.width = "100vw";
-      confettiCanvas.style.height = "100vh";
-    }
+/* Theme */
+function toggleTheme() {
+  document.body.classList.toggle('rose');
+}
 
-    resizeConfettiCanvas();
-    window.addEventListener("resize", resizeConfettiCanvas);
-    window.addEventListener("orientationchange", () => setTimeout(resizeConfettiCanvas, 150));
+/* Share */
+function share() {
+  navigator.share?.({
+    title: 'Valentine 💖',
+    text: 'Someone made this just for me 👑✨',
+    url: location.href
+  });
+}
 
-    const confettiInstance = confetti.create(confettiCanvas, {
-      resize: false,
-      useWorker: true
-    });
+/* GOLD GLITTER TRAILS */
+document.addEventListener('mousemove', sparkle);
+document.addEventListener('touchmove', e => sparkle(e.touches[0]));
 
-    function fullScreenConfetti() {
-      const end = Date.now() + 1600;
+function sparkle(e) {
+  const glitter = document.createElement('div');
+  glitter.className = 'glitter';
+  glitter.style.left = e.clientX + 'px';
+  glitter.style.top = e.clientY + 'px';
+  document.body.appendChild(glitter);
+  setTimeout(() => glitter.remove(), 1000);
+}
+</script>
 
-      (function frame() {
-        confettiInstance({
-          particleCount: 12,
-          spread: 90,
-          startVelocity: 45,
-          ticks: 180,
-          origin: { x: Math.random(), y: Math.random() * 0.3 }
-        });
-        if (Date.now() < end) requestAnimationFrame(frame);
-      })();
-
-      setTimeout(() => {
-        confettiInstance({
-          particleCount: 300,
-          spread: 140,
-          startVelocity: 60,
-          ticks: 220,
-          origin: { x: 0.5, y: 0.55 }
-        });
-      }, 300);
-    }
-
-    /* ---------- YES BUTTON GROWS ---------- */
-    let yesScale = 1;
-    function growYes() {
-      yesScale = Math.min(2.2, yesScale + 0.7);
-      yesBtn.style.transform = `translateY(-50%) scale(${yesScale})`;
-    }
-
-    /* ---------- NO BUTTON RUNS AWAY ---------- */
-    function clamp(n, min, max) {
-      return Math.max(min, Math.min(max, n));
-    }
-
-    function moveNo(px, py) {
-      const z = zone.getBoundingClientRect();
-      const b = noBtn.getBoundingClientRect();
-
-      let dx = (b.left + b.width / 2) - px;
-      let dy = (b.top + b.height / 2) - py;
-      let mag = Math.hypot(dx, dy) || 1;
-      dx /= mag;
-      dy /= mag;
-
-      let newLeft = (b.left - z.left) + dx * 150;
-      let newTop  = (b.top - z.top) + dy * 150;
-
-      newLeft = clamp(newLeft, 0, z.width - b.width);
-      newTop  = clamp(newTop, 0, z.height - b.height);
-
-      noBtn.style.left = newLeft + "px";
-      noBtn.style.top = newTop + "px";
-      noBtn.style.transform = "none";
-
-      growYes();
-    }
-
-    zone.addEventListener("pointermove", e => {
-      const b = noBtn.getBoundingClientRect();
-      const d = Math.hypot(
-        (b.left + b.width / 2) - e.clientX,
-        (b.top + b.height / 2) - e.clientY
-      );
-      if (d < 140) moveNo(e.clientX, e.clientY);
-    });
-
-    noBtn.addEventListener("click", e => e.preventDefault());
-
-    /* ---------- YES CLICK ---------- */
-    yesBtn.addEventListener("click", () => {
-      zone.style.display = "none";
-      hint.style.display = "none";     // HIDE THE HINT
-      result.style.display = "block";
-      resizeConfettiCanvas();
-      fullScreenConfetti();
-    });
-  </script>
 </body>
 </html>
