--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ button:hover {
 <div class="slide active">
   <div class="card">
     <h1>MiMi 💖</h1>
-    <p>A little something for the prettiest girl  ✨</p>
+    <p>A little something for the prettiest girl ✨</p>
     <button onclick="nextSlide()">Begin 💫</button>
   </div>
 </div>
@@ -242,7 +242,7 @@ button:hover {
 <div class="slide">
   <div class="card">
     <h1>👑 QUEEN OF MY WORLD 👑</h1>
-    <p>You’re adored, celebrated, and chosen.</p>
+    <p>You’re adored, celebrated, and chosen.Now and always.</p>
     <button onclick="share()">Share This Moment 📲</button>
     <div class="toggle" onclick="toggleTheme()">Switch Mood 🌙</div>
   </div>
