--- a/index.html
+++ b/index.html
@@ -8,198 +8,84 @@
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
+* {margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 
 :root {
-  --bg1: #000;
-  --bg2: #1a0010;
-  --accent: #ff9fc7;
+  --bg1:#000; --bg2:#1a0010; --accent:#ff9fc7;
 }
-
-body.rose {
-  --bg1: #2b0014;
-  --bg2: #7a0036;
-  --accent: #ffd1dc;
-}
+body.rose { --bg1:#2b0014; --bg2:#7a0036; --accent:#ffd1dc; }
 
 body {
-  height: 100vh;
-  overflow: hidden;
-  background: radial-gradient(circle at top, var(--bg2), var(--bg1));
-  color: white;
-  transition: background 0.8s ease;
+  height:100vh; overflow:hidden;
+  background:radial-gradient(circle at top,var(--bg2),var(--bg1));
+  color:white;
+  transition:background 0.8s ease;
 }
 
-/* Slides */
+/* Slide container */
 .slide {
-  height: 100vh;
-  width: 100%;
-  display: none;
-  align-items: cente…
-[11:29 AM, 2/3/2026] My Son: <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For You 💖</title>
-
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-:root {
-  --bg1: #000;
-  --bg2: #1a0010;
-  --accent: #ff9fc7;
-}
-
-body.rose {
-  --bg1: #2b0014;
-  --bg2: #7a0036;
-  --accent: #ffd1dc;
-}
-
-body {
-  height: 100vh;
-  overflow: hidden;
-  background: radial-gradient(circle at top, var(--bg2), var(--bg1));
-  color: white;
-  transition: background 0.8s ease;
-}
-
-/* Slides */
-.slide {
-  height: 100vh;
-  width: 100%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 30px;
-  position: relative;
-  z-index: 2;
+  position:absolute; top:0; left:0; width:100%; height:100%;
+  display:flex; align-items:center; justify-content:center;
+  text-align:center; padding:30px;
+  opacity:0; transform:translateY(50px);
+  transition:all 0.7s cubic-bezier(0.25,1,0.5,1);
+  z-index:0;
 }
 
 .slide.active {
-  display: flex;
+  opacity:1; transform:translateY(0); z-index:2;
 }
 
 .card {
   background: rgba(255,255,255,0.08);
   backdrop-filter: blur(22px);
-  border-radius: 34px;
-  padding: 46px 36px;
-  max-width: 430px;
-  width: 100%;
-  box-shadow: 0 40px 100px rgba(255, 180, 120, 0.25);
-  animation: float 4s ease-in-out infinite;
-}
-
-@keyframes float {
-  0%,100% { transform: translateY(0); }
-  50% { transform: translateY(-16px); }
+  border-radius:34px;
+  padding:46px 36px;
+  max-width:430px; width:90%;
+  box-shadow:0 40px 100px rgba(255,180,120,0.25);
 }
 
 h1 {
-  font-size: 2.2rem;
-  margin-bottom: 15px;
-  background: linear-gradient(45deg, #ffd700, #ff9fc7);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  font-size:2.3rem;
+  margin-bottom:15px;
+  background:linear-gradient(45deg,#ffd700,#ff9fc7);
+  -webkit-background-clip:text; -webkit-text-fill-color:transparent;
+  animation: glow 2.5s ease-in-out infinite alternate;
 }
 
-p {
-  font-size: 1.1rem;
-  opacity: 0.9;
-  margin-bottom: 22px;
+@keyframes glow {
+  0% { text-shadow:0 0 8px #ffd700; }
+  100% { text-shadow:0 0 24px #ff9fc7; }
 }
 
-.countdown {
-  font-size: 1.15rem;
-  letter-spacing: 1px;
-  margin-bottom: 25px;
-  color: var(--accent);
-}
+p { font-size:1.15rem; opacity:0.9; margin-bottom:22px; }
 
 button {
-  background: linear-gradient(45deg, #ffd700, #ff4f9a);
-  border: none;
-  color: white;
-  padding: 15px 36px;
-  border-radius: 50px;
-  font-size: 1rem;
-  cursor: pointer;
-  box-shadow: 0 18px 45px rgba(255,215,0,0.45);
-  transition: transform 0.2s ease;
+  background:linear-gradient(45deg,#ffd700,#ff4f9a);
+  border:none; color:white; padding:15px 36px;
+  border-radius:50px; font-size:1rem; cursor:pointer;
+  box-shadow:0 18px 45px rgba(255,215,0,0.45);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+button:hover { transform:scale(1.08); box-shadow:0 20px 60px rgba(255,215,0,0.55); }
 
-button:hover {
-  transform: scale(1.08);
-}
+.btn-group { display:flex; gap:15px; justify-content:center; flex-wrap:wrap; }
+.toggle { margin-top:15px; font-size:0.95rem; opacity:0.8; cursor:pointer; }
 
-.btn-group {
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+.countdown { font-size:1.15rem; letter-spacing:1px; margin-bottom:25px; color:var(--accent); }
 
-.toggle {
-  margin-top: 15px;
-  font-size: 0.9rem;
-  opacity: 0.8;
-  cursor: pointer;
-}
+/* Hearts */
+.heart { position:absolute; bottom:-40px; font-size:22px; animation:rise linear infinite; opacity:0.85; z-index:1; }
+@keyframes rise { 0%{transform:translateY(0) scale(1); opacity:0} 15%{opacity:1} 100%{transform:translateY(-120vh) scale(1.6); opacity:0} }
 
-/* Floating hearts */
-.heart {
-  position: absolute;
-  bottom: -40px;
-  font-size: 22px;
-  animation: rise linear infinite;
-  opacity: 0.85;
-  z-index: 1;
-}
-
-@keyframes rise {
-  0% { transform: translateY(0) scale(1); opacity: 0; }
-  15% { opacity: 1; }
-  100% { transform: translateY(-120vh) scale(1.6); opacity: 0; }
-}
-
-/* Gold glitter trail */
-.glitter {
-  position: fixed;
-  width: 8px;
-  height: 8px;
-  background: radial-gradient(circle, #ffd700, rgba(255,215,0,0.1));
-  border-radius: 50%;
-  pointer-events: none;
-  animation: sparkle 1s linear forwards;
-  z-index: 1;
-}
-
-@keyframes sparkle {
-  0% { transform: scale(1); opacity: 1; }
-  100% { transform: scale(0); opacity: 0; }
-}
+/* Glitter */
+.glitter { position:fixed; width:10px; height:10px; background:radial-gradient(circle,#ffd700,rgba(255,215,0,0.05)); border-radius:50%; pointer-events:none; animation:sparkle 1.2s linear forwards; z-index:1; }
+@keyframes sparkle { 0%{transform:scale(1);opacity:1} 100%{transform:scale(0);opacity:0} }
 </style>
 </head>
-
 <body>
 
-<!-- SLIDE 1 -->
+<!-- Slides -->
 <div class="slide active">
   <div class="card">
     <h1>MiMi 💖</h1>
@@ -208,7 +94,6 @@ button:hover {
   </div>
 </div>
 
-<!-- SLIDE 2 -->
 <div class="slide">
   <div class="card">
     <h1>Main Character Energy</h1>
@@ -217,7 +102,6 @@ button:hover {
   </div>
 </div>
 
-<!-- SLIDE 3 -->
 <div class="slide">
   <div class="card">
     <h1>Countdown to Valentines 💕</h1>
@@ -226,7 +110,6 @@ button:hover {
   </div>
 </div>
 
-<!-- SLIDE 4 -->
 <div class="slide">
   <div class="card">
     <h1>So… 💘</h1>
@@ -238,101 +121,85 @@ button:hover {
   </div>
 </div>
 
-<!-- SLIDE 5 -->
 <div class="slide">
   <div class="card">
     <h1>👑 QUEEN OF MY WORLD 👑</h1>
-    <p>You’re adored, celebrated, and chosen.Now and always.</p>
+    <p>You’re adored, celebrated, and chosen. Now and always.</p>
     <button onclick="share()">Share This Moment 📲</button>
     <div class="toggle" onclick="toggleTheme()">Switch Mood 🌙</div>
   </div>
 </div>
 
 <script>
-let current = 0;
-const slides = document.querySelectorAll('.slide');
+let current=0;
+const slides=document.querySelectorAll('.slide');
 
 /* Slide navigation */
-function nextSlide() {
+function nextSlide(){
   slides[current].classList.remove('active');
   current++;
-  if (current < slides.length) {
-    slides[current].classList.add('active');
-  }
+  if(current<slides.length){ slides[current].classList.add('active'); }
 }
 
-/* Finale */
-function finale() {
+/* Finale with cinematic confetti + hearts */
+function finale(){
   nextSlide();
-  confetti({
-    particleCount: 350,
-    spread: 150,
-    origin: { y: 0.6 }
-  });
-  for (let i = 0; i < 40; i++) createHeart();
+  confetti({particleCount:400,spread:180,origin:{y:0.6},colors:['#ffd700','#ff4f9a','#ffb6c1']});
+  for(let i=0;i<60;i++) createHeart();
 }
 
 /* Hearts */
-function createHeart() {
-  const heart = document.createElement('div');
-  heart.className = 'heart';
-  heart.innerHTML = '💖';
-  heart.style.left = Math.random() * 100 + 'vw';
-  heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
+function createHeart(){
+  const heart=document.createElement('div');
+  heart.className='heart';
+  heart.innerHTML='💖';
+  heart.style.left=Math.random()*100+'vw';
+  heart.style.animationDuration=(Math.random()*3+3)+'s';
+  heart.style.fontSize=(18+Math.random()*14)+'px';
   document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 6000);
+  setTimeout(()=>heart.remove(),6000);
 }
-setInterval(createHeart, 850);
+setInterval(createHeart,800);
 
 /* Countdown */
-const countdownEl = document.getElementById('countdown');
-const valentines = new Date(new Date().getFullYear(), 1, 14).getTime();
-setInterval(() => {
-  const diff = valentines - Date.now();
-  const d = Math.floor(diff / 86400000);
-  const h = Math.floor((diff / 3600000) % 24);
-  const m = Math.floor((diff / 60000) % 60);
-  countdownEl.textContent = ${d}d ${h}h ${m}m until Valentine’s 💘;
-}, 1000);
+const countdownEl=document.getElementById('countdown');
+const valentines=new Date(new Date().getFullYear(),1,14).getTime();
+setInterval(()=>{
+  const diff=valentines-Date.now();
+  const d=Math.floor(diff/86400000);
+  const h=Math.floor((diff/3600000)%24);
+  const m=Math.floor((diff/60000)%60);
+  countdownEl.textContent=${d}d ${h}h ${m}m until Valentine’s 💘;
+},1000);
 
 /* Swipe support */
-let startY = 0;
-document.addEventListener('touchstart', e => startY = e.touches[0].clientY);
-document.addEventListener('touchend', e => {
-  if (startY - e.changedTouches[0].clientY > 50 && current < slides.length - 1) {
-    nextSlide();
-  }
+let startY=0;
+document.addEventListener('touchstart',e=>startY=e.touches[0].clientY);
+document.addEventListener('touchend',e=>{
+  if(startY-e.changedTouches[0].clientY>50 && current<slides.length-1) nextSlide();
 });
 
 /* Theme toggle */
-function toggleTheme() {
-  document.body.classList.toggle('rose');
+function toggleTheme(){document.body.classList.toggle('rose');}
+
+/* Share button */
+function share(){
+  if(navigator.share){navigator.share({title:'Valentine 💖',text:'Someone made this just for me 👑✨',url:location.href});}
+  else{alert('Copy the link and share the love 💕');}
 }
 
-/* Share */
-function share() {
-  if (navigator.share) {
-    navigator.share({
-      title: 'Valentine 💖',
-      text: 'Someone made this just for me 👑✨',
-      url: location.href
-    });
-  } else {
-    alert('Copy the link and share the love 💕');
-  }
-}
-
-/* Gold glitter trail */
-document.addEventListener('mousemove', sparkle);
-document.addEventListener('touchmove', e => sparkle(e.touches[0]));
-
-function sparkle(e) {
-  const glitter = document.createElement('div');
-  glitter.className = 'glitter';
-  glitter.style.left = e.clientX + 'px';
-  glitter.style.top = e.clientY + 'px';
+/* Cinematic gold glitter trail */
+document.addEventListener('mousemove',sparkle);
+document.addEventListener('touchmove',e=>sparkle(e.touches[0]));
+function sparkle(e){
+  const glitter=document.createElement('div');
+  glitter.className='glitter';
+  glitter.style.left=e.clientX+'px';
+  glitter.style.top=e.clientY+'px';
+  glitter.style.width=(5+Math.random()*10)+'px';
+  glitter.style.height=(5+Math.random()*10)+'px';
   document.body.appendChild(glitter);
-  setTimeout(() => glitter.remove(), 1000);
+  setTimeout(()=>glitter.remove(),1200);
 }
 </script>
 
